Lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC
   28       | error SEMI

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error RP

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 22 27 28 37 41
SEMI (258) 4 5 7 28 31 33 40 41
COMMA (259) 9 23 43 64
ASSIGNOP (260) 45 46
RELOP (261) 49
PLUS (262) 50
MINUS (263) 51 55
STAR (264) 52
DIV (265) 53
AND (266) 47
OR (267) 48
DOT (268) 60
NOT (269) 56
TYPE (270) 10
LP (271) 20 21 34 35 36 54 57 58
RP (272) 20 21 22 34 35 36 37 54 57 58
LB (273) 18 59
RB (274) 18 19 59
LC (275) 12 26
RC (276) 12 26 27
STRUCT (277) 12 13
RETURN (278) 33
IF (279) 34 35
ELSE (280) 35
WHILE (281) 36
INT (282) 18 62
FLOAT (283) 63
ID (284) 14 16 17 20 21 57 58 60 61
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6 7, on right: 3
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 25 40 41
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18 19, on right: 8 9 18 25 44 45
FunDec (41)
    on left: 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27 28, on right: 6 32
StmtList (45)
    on left: 29 30, on right: 26 29
Stmt (46)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (47)
    on left: 38 39, on right: 12 26 38
Def (48)
    on left: 40 41, on right: 38
DecList (49)
    on left: 42 43, on right: 40 43
Dec (50)
    on left: 44 45, on right: 42 43
Exp (51)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55 56 59
    60 64 65
Args (52)
    on left: 64 65, on right: 57 64


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   19 VarDec: error . RB
   22 FunDec: error . RP

    RP  shift, and go to state 22
    RB  shift, and go to state 23


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 17 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 23

   19 VarDec: error RB .

    $default  reduce using rule 19 (VarDec)


State 24

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 38
    ID     shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 27

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 41


State 28

   27 CompSt: error . RC
   28       | error . SEMI

    SEMI  shift, and go to state 42
    RC    shift, and go to state 43


State 29

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 32

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 33

   38 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 33


State 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 35

   25 ParamDec: Specifier . VarDec

    error  shift, and go to state 38
    ID     shift, and go to state 39

    VarDec  go to state 51


State 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 24 (VarList)


State 38

   19 VarDec: error . RB

    RB  shift, and go to state 23


State 39

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 40

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 41

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 42

   28 CompSt: error SEMI .

    $default  reduce using rule 28 (CompSt)


State 43

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 44

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 29
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 45

   19 VarDec: error . RB
   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69
    RB    shift, and go to state 23


State 46

   18 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 27

    $default  reduce using rule 44 (Dec)


State 47

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 48

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 42 (DecList)


State 49

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 50

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 51

   18 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 25 (ParamDec)


State 52

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 53

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 37


State 54

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 55

   27 CompSt: error . RC
   28       | error . SEMI
   37 Stmt: error . RP

    SEMI  shift, and go to state 42
    RP    shift, and go to state 74
    RC    shift, and go to state 43


State 56

   55 Exp: MINUS . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 75


State 57

   56 Exp: NOT . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 76


State 58

   54 Exp: LP . Exp RP

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 77


State 59

   33 Stmt: RETURN . Exp SEMI

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 78


State 60

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 61

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 62

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 63

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 64

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 61 (Exp)


State 65

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 66

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 67

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 29
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 83
    Stmt      go to state 67
    Exp       go to state 68


State 68

   31 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 69

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 70

   45 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 95


State 71

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 72

   43 DecList: Dec COMMA . DecList

    error  shift, and go to state 38
    ID     shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 96
    Dec      go to state 48


State 73

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 74

   37 Stmt: error RP .

    $default  reduce using rule 37 (Stmt)


State 75

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 55 (Exp)


State 76

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 56 (Exp)


State 77

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 97
    LB        shift, and go to state 94


State 78

   33 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 79

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 99


State 80

   36 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 100


State 81

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 101
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp   go to state 102
    Args  go to state 103


State 82

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 83

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 84

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 85

   46 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 104


State 86

   49 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 105


State 87

   50 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 106


State 88

   51 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 107


State 89

   52 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 108


State 90

   53 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 109


State 91

   47 Exp: Exp AND . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 110


State 92

   48 Exp: Exp OR . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 111


State 93

   60 Exp: Exp DOT . ID

    ID  shift, and go to state 112


State 94

   59 Exp: Exp LB . Exp RB

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 113


State 95

   45 Dec: VarDec ASSIGNOP Exp .
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 45 (Dec)


State 96

   43 DecList: Dec COMMA DecList .

    $default  reduce using rule 43 (DecList)


State 97

   54 Exp: LP Exp RP .

    $default  reduce using rule 54 (Exp)


State 98

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 99

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 114
    LB        shift, and go to state 94


State 100

   36 Stmt: WHILE LP Exp . RP Stmt
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
